[package]
name = "reshock-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_pancam = "0.3"
ab_glyph = "0.2.6"
itertools = "0.10"
anyhow = "1.0"
serde = "1.0"

[dependencies.bevy]
version = "0.7"
default-features = false
features = [
  "animation",          # Animation support
  "bevy_winit",         # Window management
  "x11",                # Linux: Support X11 windowing system
  "filesystem_watcher", # Asset hot-reloading
  "render",             # Graphics Rendering
  "png",
  "hdr",
  "wayland",              # Linux: Support Wayland windowing system
  "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
  "dynamic",      # Dynamic linking for faster compile-times
]

[dependencies.bevy_kira_audio]
version = "0.10"
features = ["mp3"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
