[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
log = "0.4"
env_logger = "0.8"
tonic-reflection = "0.5"
bevy_ecs = "0.8"
glam = "0.21"

[dependencies.config]
version = "0.13"
features = ["toml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.20"
features = ["rt-multi-thread", "macros"]

[build-dependencies.tonic-build]
version = "0.8"
