[package]
name = "reshock-server"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
tonic = "0.8"
log = "0.4"
env_logger = "0.8"
tonic-reflection = "0.5"
glam = "0.21"
itertools = "0.10"
anyhow = "1.0"
thiserror = "1.0"
bevy_ecs = "0.8"
rand = "0.8"
deku = "0.13"

[dependencies.config]
version = "0.13"
features = ["toml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.20"
features = ["rt-multi-thread", "macros"]
